--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,3 @@
-* {
-	margin: 0;
-	padding: 0;
-}
-body{
-	font-family: "Lato";
-	height: 100%;
-	width: 100%;
-	position: absolute;;
-}
-.wrap{
-	margin: 0 auto;
-	width: 1024px;
-}
-/*HEADER*/
-body > header {
-	height: 80px;
-	position: fixed;
-	background: #039be5;
-	width: 100%;
-	z-index: 3; }
-
-	body > header  .logo {
-		display: inline;
-		font-size: 24px;
-		text-decoration: none;
-		line-height: 70px;
-		font-weight: 300;
-		text-transform: uppercase;
-		color: white; }
-
-	body > header nav {
-		display: inline-block;
-		float: right; }
-
-		body > header nav > ul > li {
-			display: inline-block;
-			padding: 0.7em;
-			line-height: 54px; }
-
-			body > header nav > ul > li > a {
-				text-decoration: none;
-				color: #fff;
-				font-weight: 300;
-				text-transform: uppercase;
-				font-size: 14px; }
-			body > header nav > ul > li > a:hover {
-				font-weight: 400;
-				text-transform: uppercase;
-				color: white; }
-
-/**
- * WRAPPER FOR THE MAIN CONTENT
- */
-#content {
-	height: 100%;
-	padding-top: 80px;
-	box-sizing: border-box; }
-
-	#content > section {
-		display: inline-block;
-		width: 100%; }
 
 /*HOME*/
 section#home {
@@ -96,7 +34,7 @@ section#home {
 
 	#services > .wrap > .container {
 		text-align: center;
-		width: 1024px;
+		width: 100%0.;
 		margin: 0 auto; }
 
 		#services > .wrap > .container > .one-third >i {
@@ -104,8 +42,8 @@ section#home {
 			display: inline-block;
 			background: #039be5;
 			border-radius: 100%;
-			height: 130px;
-			width: 130px;
+			height: 120px;
+			width: 120px;
 			margin: 80px 72px 30px 72px;
 			text-align: center;
 			border: 3px solid white;
@@ -257,7 +195,7 @@ section#home {
 				font-size: 14px;
 				margin-right: 12px;}
 
-			#portfolio > .wrap > nav > ul > li > a.active, a:hover {
+			#portfolio > .wrap > nav > ul > li > a:active, a:hover {
 				border-bottom: 3px solid #039be5;
 				color: #039be5;
 				padding-bottom: 9px; }
@@ -339,7 +277,7 @@ footer {height: 100px;}
 		text-transform: uppercase;
 		font-size: 36px;
 		text-align: center;
-		margin-top: 35px;}
+		margin-top: 35okpx;}
 
 	footer > .wrap > p {
 		color: #888;
